--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							alles wichtige übers Studium und Karlsruhe kennen!
                         </p>
 						<p class="my-4">
-                            11. - 15. Oktober 2021
+                            17. - 21. Oktober 2022
                         </p>
                         <div class="my-4">
                             <iframe
@@ -127,7 +127,7 @@
                     <div class="col-md-6 mb-4">
                         <h2>Überzeugt? ✓</h2>
                         <p>
-                            Werde Teil von Project π und stimme auf <a class="text-light" href="https://o-phase.com">o-phase.com</a> für unsere Gruppe ab. Wir sehen uns am Montag den 11. Oktober!
+                            Werde Teil von Project π und schließe dich uns nach der Einführungsveranstaltung an. Wir sehen uns am Montag den 17. Oktober!
 							Wenn du willst, kannst du auch unserem Discord Server beitreten, um dich direkt mit uns zu connecten.
                         </p>
                         <a class="btn btn-discord" href="https://discord.gg/YVCGjyG">
