--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#about">Über uns</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://docs.google.com/spreadsheets/d/1zVVDvRROx8fZ1lMjnyTvS5q9h0RiYD411sC6fwG_y5I/edit?usp=sharing">Wochenplan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://docs.google.com/spreadsheets/d/1X1ICPyk1ldlgJyd0GtDAkI0G9TSDtIiCXNMmnL2Iwn8/edit#gid=0">Wochenplan</a></li>
                 </ul>
                 <div>
                     <a class="nav-link btn btn-discord" href="https://discord.gg/YVCGjyG">
@@ -61,14 +61,14 @@
 							alles wichtige übers Studium und Karlsruhe kennen!
                         </p>
 						<p class="my-4">
-                            17. - 21. Oktober 2022
+                            16. - 22. Oktober 2023
                         </p>
                         <div class="my-4">
                             <iframe
                             width="560"
                             height="315"
                             style="width:100%; max-width:560px; border: 1px solid #333333"
-                            src="https://www.youtube-nocookie.com/embed/KOsk7k022Gk"
+                            src="https://www.youtube.com/embed/zCI6ww4RmcM?si=1k6AOJyD5wR40Fmc"
                             srcdoc="
                                 <style>
                                     *{padding:0;margin:0;overflow:hidden}
@@ -78,7 +78,7 @@
                                     .info{font-size: 18px; color: grey;adding: 15px}
                                     a{text-decoration: none;}
                                 </style>
-                                <a href=https://www.youtube-nocookie.com/embed/KOsk7k022Gk>
+                                <a href=https://www.youtube.com/embed/zCI6ww4RmcM?si=1k6AOJyD5wR40Fmc>
                                     <div class=container>
                                         <div class=title>Unser Video &#x25BA;</div><br/>
                                         <div class=info>Bei Klick werden Daten an Drittanbieter übermittelt.<br/>Hinweis wegen DSGVO und so.</div>
@@ -111,7 +111,7 @@
 
                         <h2>Was machen wir eigentlich? 🤔</h2>
                         <p>
-                            Dieses Jahr können wir dir endlich wieder <del>online</del> offline zeigen, was die Uni und die Stadt so zu bieten hat. Lass dich von uns überraschen, oder schau in den <a href="https://docs.google.com/spreadsheets/d/1zVVDvRROx8fZ1lMjnyTvS5q9h0RiYD411sC6fwG_y5I/edit?usp=sharing">Wochenplan</a>!
+                            Auch dieses Jahr können wir dir wieder zeigen, was die Uni und die Stadt so zu bieten hat. Lass dich von uns überraschen, oder schau in den <a href="https://docs.google.com/spreadsheets/d/1X1ICPyk1ldlgJyd0GtDAkI0G9TSDtIiCXNMmnL2Iwn8/edit#gid=0">Wochenplan</a>!
                         </p>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                     <div class="col-md-6 mb-4">
                         <h2>Überzeugt? ✓</h2>
                         <p>
-                            Werde Teil von Project π und schließe dich uns nach der Einführungsveranstaltung an. Wir sehen uns am Montag den 17. Oktober!
+                            Werde Teil von Project π und schließe dich uns nach der Einführungsveranstaltung an. Wir sehen uns am Montag den 16. Oktober!
 							Wenn du willst, kannst du auch unserem Discord Server beitreten, um dich direkt mit uns zu connecten.
                         </p>
                         <a class="btn btn-discord" href="https://discord.gg/YVCGjyG">
@@ -143,7 +143,7 @@
     </main>
 
     <footer>
-        &copy; 2022 Project π | Made with 🍺 in Karlsruhe
+        &copy; 2023 Project π | Made with 🍺 in Karlsruhe
     </footer>
 </body>
 </html>
