--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#about">Über uns</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://docs.google.com/spreadsheets/d/1X1ICPyk1ldlgJyd0GtDAkI0G9TSDtIiCXNMmnL2Iwn8/edit#gid=0">Wochenplan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#schedule">Wochenplan</a></li>
                 </ul>
                 <div>
                     <a class="nav-link btn btn-discord" href="https://discord.gg/YVCGjyG">
@@ -108,14 +108,24 @@
                         <p>
                             Project π ist eine der beliebtesten Party-Gruppen am KIT und leitet Info/Mathe Erstis am KIT seit 2015 durch die O-Phase. Bei uns erfährst du alles, was du für dein zukünftiges Studentenleben brauchst, (u.a. wo man frisches Bier bekommt 🍺). Darüber hinaus gibt es bei uns Campusführungen, Bier Pong, Flunkyball, und vieles mehr was wir in den letzten Jahren an Erfahrung für die O-Phase sammeln konnten.
                         </p>
-
-                        <h2>Was machen wir eigentlich? 🤔</h2>
-                        <p>
-                            Auch dieses Jahr können wir dir wieder zeigen, was die Uni und die Stadt so zu bieten hat. Lass dich von uns überraschen, oder schau in den <a href="https://docs.google.com/spreadsheets/d/1X1ICPyk1ldlgJyd0GtDAkI0G9TSDtIiCXNMmnL2Iwn8/edit#gid=0">Wochenplan</a>!
-                        </p>
                     </div>
                 </div>
             </div>
+
+            <div id="schedule" class="id-anchor"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h2>Was machen wir eigentlich? 🤔</h2>
+                        <p>
+                            Auch dieses Jahr können wir dir wieder zeigen, was die Uni und die Stadt so zu bieten hat. Lass dich von uns überraschen, oder schau in den Wochenplan!
+                        </p>
+                        <iframe class="schedule" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ7AAMqvfKcrSeZXvGodtvde0AA03tlusuJPoec3n4sYPZp1g7ZXbcCYsXJxr0_D-2OyWQ5yd3E1qCx/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                    </div>
+                    
+                </div>
+            </div>
+            
         </section>
 
         <section id="signup">
