Updated schedule link

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <p>
                             Auch dieses Jahr können wir dir wieder zeigen, was die Uni und die Stadt so zu bieten hat. Lass dich von uns überraschen, oder schau in den Wochenplan!
                         </p>
-                        <iframe class="schedule" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ7AAMqvfKcrSeZXvGodtvde0AA03tlusuJPoec3n4sYPZp1g7ZXbcCYsXJxr0_D-2OyWQ5yd3E1qCx/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                        <iframe class="schedule" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTDEsgjd4CxqNQ_ZgbGkJ5OaRl2XCWiuCuc1Cb_-zvIYukChq6ErlF-o7U4If5L8jIAiZPpR6SHx6a4/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false""></iframe>
                     </div>
                     
                 </div>
