Update dates and schedule for 2024

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="robots" content="noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project π - Beste Gruppe der O-Phase 2020</title>
+    <title>Project π - Beste Gruppe der O-Phase 2024</title>
 
     <!-- Favicon / App related -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -61,14 +61,14 @@
 							alles wichtige übers Studium und Karlsruhe kennen!
                         </p>
 						<p class="my-4">
-                            16. - 22. Oktober 2023
+                            14. - 20. Oktober 2024
                         </p>
                         <div class="my-4">
                             <iframe
                             width="560"
                             height="315"
                             style="width:100%; max-width:560px; border: 1px solid #333333"
-                            src="https://www.youtube.com/embed/zCI6ww4RmcM?si=1k6AOJyD5wR40Fmc"
+                            src="https://drive.google.com/file/d/1Frldg5Qb2vAkbFHzA7fj_QvVohX-uC3d/preview"
                             srcdoc="
                                 <style>
                                     *{padding:0;margin:0;overflow:hidden}
@@ -78,7 +78,7 @@
                                     .info{font-size: 18px; color: grey;adding: 15px}
                                     a{text-decoration: none;}
                                 </style>
-                                <a href=https://www.youtube.com/embed/zCI6ww4RmcM?si=1k6AOJyD5wR40Fmc>
+                                <a href=https://drive.google.com/file/d/1Frldg5Qb2vAkbFHzA7fj_QvVohX-uC3d/preview>
                                     <div class=container>
                                         <div class=title>Unser Video &#x25BA;</div><br/>
                                         <div class=info>Bei Klick werden Daten an Drittanbieter übermittelt.<br/>Hinweis wegen DSGVO und so.</div>
@@ -120,7 +120,7 @@
                         <p>
                             Auch dieses Jahr können wir dir wieder zeigen, was die Uni und die Stadt so zu bieten hat. Lass dich von uns überraschen, oder schau in den Wochenplan!
                         </p>
-                        <iframe class="schedule" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTDEsgjd4CxqNQ_ZgbGkJ5OaRl2XCWiuCuc1Cb_-zvIYukChq6ErlF-o7U4If5L8jIAiZPpR6SHx6a4/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false""></iframe>
+                        <iframe class="schedule" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTAkNTwtZl0ToCCRv-59X62cr-dvkkZ2soL4KDWrM18MffQwZcADtOdWRuoElHBaVUY4cvh3AW2A5HS/pubhtml?gid=1207992823&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
                     </div>
                     
                 </div>
@@ -137,7 +137,7 @@
                     <div class="col-md-6 mb-4">
                         <h2>Überzeugt? ✓</h2>
                         <p>
-                            Werde Teil von Project π und schließe dich uns nach der Einführungsveranstaltung an. Wir sehen uns am Montag den 16. Oktober!
+                            Werde Teil von Project π und schließe dich uns nach der Einführungsveranstaltung an. Wir sehen uns am Montag den 14. Oktober!
 							Wenn du willst, kannst du auch unserem Discord Server beitreten, um dich direkt mit uns zu connecten.
                         </p>
                         <a class="btn btn-discord" href="https://discord.gg/YVCGjyG">
@@ -153,7 +153,7 @@
     </main>
 
     <footer>
-        &copy; 2023 Project π | Made with 🍺 in Karlsruhe
+        &copy; 2024 Project π | Made with 🍺 in Karlsruhe
     </footer>
 </body>
 </html>
