--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#about">Über uns</a></li>
                     <li class="nav-item"><a class="nav-link" href="#schedule">Wochenplan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#challenge">Wochenaufgaben</a></li>
                 </ul>
                 <div>
                     <a class="nav-link btn btn-discord" href="https://discord.gg/YVCGjyG">
@@ -126,6 +127,20 @@
                 </div>
             </div>
             
+            <div id="challenge" class="id-anchor"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h2>Wochenaufgaben 🤔</h2>
+                        <p>
+                            Schließt euch zu Teams zusammen, löst Wochenaufgaben und tretet gemeinsam bei der pi-Rally am Mittwoch an. Das Gewinnerteam erhält tolle Preise wie bspw. ein Bierabo im Z10 🍺 und Kaffee Gutscheine für das AKK ☕️.
+                        </p>
+                        <iframe class="challenge" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5HIxqfYkOjg2XvWP-J9hQfsa2rc89lbSfbByGFXFFlZ-CVkBiU4yekWoMhCDGf8it5rutPlGWX5jc/pubhtml?gid=263836190&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                    </div>
+                    
+                </div>
+            </div>
+
         </section>
 
         <section id="signup">
