fix schedule size

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							alles wichtige übers Studium und Karlsruhe kennen!
                         </p>
 						<p class="my-4">
-                            20. - 24. Oktober 2024
+                            20. - 24. Oktober 2025
                         </p>
                         <div class="my-4">
                             <iframe
@@ -120,7 +120,7 @@
                         <p>
                             Auch dieses Jahr können wir dir wieder zeigen, was die Uni und die Stadt so zu bieten hat. Lass dich von uns überraschen, oder schau in den Wochenplan!
                         </p>
-                        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTmya7AuHZvSWmensZzt5sTxAdDTW3xGfZhytHN6GtKIwo6eYsHZE0p8HzRejrDcEKTUjFfrLzMtxT0/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                        <iframe class="schedule" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTmya7AuHZvSWmensZzt5sTxAdDTW3xGfZhytHN6GtKIwo6eYsHZE0p8HzRejrDcEKTUjFfrLzMtxT0/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
                     </div>
                     
                 </div>
